# PYdotf

./: README.md  example_dotf.toml  py_dotf.py  py_dotf_logic.py  py_dotf_parseArgs.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
